The tab labels are not displayed correctly for the western blot data. The tabs for the larger western blot experimental technique window are also mis-aligned. More so than usual. The copy and trash icons should be replaced with those on a transparent background. The new copy and trash icons are getting cut off at the bottom.

--- a/html_app/ui/gen/experiment_setup.gss.css
+++ b/html_app/ui/gen/experiment_setup.gss.css
@@ -61,7 +61,7 @@ table.scb_s_experiment_setup_table {
   border: 0;
   background-color: #e9e9e9;
   width: 24px;
-  height: 16px;
+  height: 20px;
   cursor: pointer;
 }
 .scb_s_experiment_setup_new_row_gray {
